--- a/data/index.html
+++ b/data/index.html
@@ -10,8 +10,6 @@
   <link rel="stylesheet" href="vendors/font-awesome/css/font-awesome.min.css">
 
   <link rel="stylesheet" href="vendors/jvectormap/jquery-jvectormap.css">
-  <link rel="stylesheet" href="vendors/owl-carousel-2/owl.carousel.min.css">
-  <link rel="stylesheet" href="vendors/owl-carousel-2/owl.theme.default.min.css">
   <link rel="stylesheet" href="css/style.css">
   <link rel="shortcut icon" href="images/favicon.png" />
 </head>
@@ -91,7 +89,12 @@
                   <div class="row">
                     <div class="col-9">
                       <div class="d-flex align-items-center align-self-start">
-                        <h3 class="mb-0">12.5</h3>
+                        <h3 class="mb-0" id="voltage">
+                          <div class="spinner-border text-primary" role="status"
+                            style="color: rgba(var(--bs-success-rgb), var(--bs-text-opacity)) !important;">
+                            <span class="visually-hidden">Loading...</span>
+                          </div>
+                        </h3>
                         <h3 class="text-success ms-2 mb-0 font-weight-medium">v</h3>
                       </div>
                     </div>
@@ -115,7 +118,12 @@
                   <div class="row">
                     <div class="col-9">
                       <div class="d-flex align-items-center align-self-start">
-                        <h3 class="mb-0">79</h3>
+                        <h3 class="mb-0">
+                          <div class="spinner-border text-primary" role="status"
+                            style="color: rgba(var(--bs-success-rgb), var(--bs-text-opacity)) !important;">
+                            <span class="visually-hidden">Loading...</span>
+                          </div>
+                        </h3>
                         <h3 class="text-success ms-2 mb-0 font-weight-medium">c</h3>
                       </div>
                     </div>
@@ -139,7 +147,12 @@
                   <div class="row">
                     <div class="col-9">
                       <div class="d-flex align-items-center align-self-start">
-                        <h3 class="mb-0">150</h3>
+                        <h3 class="mb-0">
+                          <div class="spinner-border text-primary" role="status"
+                            style="color: rgba(var(--bs-success-rgb), var(--bs-text-opacity)) !important;">
+                            <span class="visually-hidden">Loading...</span>
+                          </div>
+                        </h3>
                         <h3 class="text-danger ms-2 mb-0 font-weight-medium">c</h3>
                       </div>
                     </div>
@@ -163,8 +176,13 @@
                   <div class="row">
                     <div class="col-9">
                       <div class="d-flex align-items-center align-self-start">
-                        <h3 class="mb-0">35L</h3>
-                        <p class="text-success ms-2 mb-0 font-weight-medium">78.2%</p>
+                        <h3 class="mb-0">
+                          <div class="spinner-border text-primary" role="status"
+                            style="color: rgba(var(--bs-success-rgb), var(--bs-text-opacity)) !important;">
+                            <span class="visually-hidden">Loading...</span>
+                          </div>L
+                        </h3>
+                        <p class="text-success ms-2 mb-0 font-weight-medium">...%</p>
                       </div>
                     </div>
                     <div class="col-3">
@@ -492,7 +510,6 @@
   <!-- Plugin js for this page -->
   <script src="vendors/jvectormap/jquery-jvectormap.min.js"></script>
   <script src="vendors/jvectormap/jquery-jvectormap-world-mill-en.js"></script>
-  <script src="vendors/owl-carousel-2/owl.carousel.min.js"></script>
   <!-- End plugin js for this page -->
   <!-- inject:js -->
   <script src="js/misc.js"></script>
@@ -510,6 +527,14 @@
 
       $(".content-wrapper").fadeOut();
       $($(this).attr("data-view-id")).fadeIn();
+    });
+
+    var socket = new WebSocket('ws://' + window.location.hostname + '/ws');
+    socket.addEventListener('message', function (event) {
+      document.getElementById('voltage').textContent = event.data;
+    });
+    socket.addEventListener('close', function (event) {
+      console.log("closed");
     });
   </script>
 </body>
