--- a/data/index.html
+++ b/data/index.html
@@ -5,7 +5,8 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <title>PV 010 Admin</title>
-  <script src="vendors/js/vendor.bundle.base.js"></script>
+  <script src="vendors/js/jquery.js"></script>
+  <script src="vendors/js/bsbundle.js"></script>
   <link rel="stylesheet" href="vendors/css/vendor.bundle.base.css">
   <link rel="stylesheet" href="vendors/font-awesome/css/font-awesome.min.css">
 
