--- a/data/index.html
+++ b/data/index.html
@@ -8,8 +8,6 @@
   <script src="vendors/js/jquery.js"></script>
   <script src="vendors/js/bsbundle.js"></script>
   <link rel="stylesheet" href="vendors/css/vendor.bundle.base.css">
-  <link rel="stylesheet" href="vendors/font-awesome/css/font-awesome.min.css">
-
   <link rel="stylesheet" href="vendors/jvectormap/jquery-jvectormap.css">
   <link rel="stylesheet" href="css/style.css">
   <link rel="shortcut icon" href="images/favicon.png" />
@@ -129,7 +127,7 @@
             </div>
           </div>
           <div class="row">
-            <div class="col-md-6 grid-margin stretch-card">
+            <div class="col-md-12 grid-margin stretch-card">
               <div class="card">
                 <div class="card-body">
                   <h4 class="card-title text-center">Weather Station</h4>
@@ -138,6 +136,23 @@
                       <canvas id="transaction-history" class="transaction-chart"></canvas>
                     </div>
                     <div class="custom-value">20.5 <span>Set</span>
+                    </div>
+                    <div class="row">
+                      <div class="col-3">
+                        <label for="fanSpeedRange" class="form-label">Fan Speed</label>
+                      </div>
+                      <div class="col-9">
+                        <input autocomplete="off" type="range" min="150" max="255" value="150" class="form-range"
+                          id="fanSpeedRange">
+                      </div>
+                    </div>
+                    <div class="row">
+                      <div class="col-3 align-content-center">
+                        <label for="fanSpeedRange" class="form-label mb-0">A/C</label>
+                      </div>
+                      <div class="col-9">
+                        <button type="button" class="btn btn-primary">ON/OFF</button>
+                      </div>
                     </div>
                   </div>
                   <div class="row mt-3">
@@ -164,9 +179,6 @@
                   </div>
                 </div>
               </div>
-            </div>
-            <div class="col-md-6 grid-margin stretch-card">
-
             </div>
           </div>
           <div class="row">
